--- a/views/merch.ejs
+++ b/views/merch.ejs
@@ -24,7 +24,7 @@
             <div class="container">
                 <br>
                 <h2 style="text-align: center; font-weight: 900; color:#752329">MERCHANDISE</h2>
-                <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 p-4 justify-content-center">
 
                     <div class="col">
                         <div class="card h-100" style="border: 2px solid #ddd; border-radius: 10px; padding: 20px 20px; overflow: hidden; background-color: #262626;">
