--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,31 +18,122 @@
 
     <%- include('header.ejs', { isLoggedIn }) %>
 
-    <h1>Profile</h1>
-    <h2>User Details of <%= user.fName + " " + user.lName %></h2>
-    <h3>First Name: <%= user.fName %></h3>
-    <h3>Last Name: <%= user.lName %></h3>
-    <h3>Username: <%= user.username %></h3>
-    <h3>Email: <%= user.email %></h3>
-    <br>
-    <% if (user.reviews && user.reviews.length > 0) { %> <!-- CHECK IF MAY REVIEWS BA YUNG USER -->
-        <h2>Reviews</h2>
-        <% user.reviews.forEach(reviews => { %>
-            <div>
-                <h3>Rating: <%= reviews.rating %></h3>    
-                <h3>Message: <%= reviews.message %></h3>
-                <h3>Date: <%= reviews.dateCreated %></h3>
-                <br> <!-- FOR DISPLAY PURPOSES ONLY -->
+    <section style="background-color: #eee;">
+        <h1 style="text-align: center; padding: 20px; font-family: 'Playfair Display', serif; font-weight: 900; color:#752329"> Profile</h1>
+        <div class="container py-3">
+          <div class="row"> 
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <div class="card-body text-center">
+                  <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle img-fluid" style="width: 150px;">
+                  <h5 class="my-3"><%= user.username %></h5>
+                  <p class="text-muted mb-1"><%= user.fName + " " + user.lName %></p>
+                </div>
+              </div>
+       
             </div>
-        <% }) %>
-    <% } %>
+            <div class="col-lg-8">
+              <div class="card mb-4">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Full Name</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <p class="text-muted mb-0"><%= user.fName + " " + user.lName %></p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Email</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <p class="text-muted mb-0"><%= user.email %></p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Username</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <p class="text-muted mb-0"><%= user.username %></p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Password</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <p class="text-muted mb-0">********</p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-9">
+                        <button class="btn btn-outline-secondary" type="button" id="edit">Edit Profile</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    <section class="bg-light py-5 py-xl-8 ">
+        <h1 style="text-align: center; padding: 20px; font-family: 'Playfair Display', serif; font-weight: 900; color:#752329">Reviews</h1>
+        <div class="container-fluid overflow-hidden">
+            <div class="row gy-4 gy-md-0 gx-xxl-5 ">
+                <% user.reviews.forEach(reviews => { %>
+                    <!-- REVIEW CARDS -->
+                    <div class="col-12 col-md-4 mb-3">
+                        <div class="card border-0 border-bottom shadow-sm rounded-card " style="border-color: #752329; background-color: #E8E8E1; ">
+                            <div class="card-body p-4 p-xxl-5 " style="background-color: #e8e8e1; ">
+                                <figure>
+                                    <figcaption>
+                                        <div class="coffee-ratings mb-3 " style="color: #752329; ">
+                                            <% let rating = reviews.rating %>
+                                                <% for( let i = 0; i < rating; i++ ) { %>
+                                                    <i class="fas fa-coffee "></i>
+                                                <% } %>
+                                        </div>
+                                        <blockquote class="bsb-blockquote-icon mb-4 ">
+                                            <h5 class="card-title ">A Latte Room for Improvement</h5>
+                                            <p class="card-text " style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal; ">
+                                                <%= reviews.message %>
+                                            </p>
+                                        </blockquote>
+                                        <h4 class="mb-2 ">
+                                            <%= reviews.username %>
+                                        </h4>
+                                        <p class="card-text ">
+                                            <%= reviews.dateCreated %>
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- REVIEW CARDS -->
+                <% }) %>
+            </div>
+        </div>
+    </section>
     
-    <!-- TO BE ADDED : ORDER HISTORY AND CART(?) -->
+    <!-- TO BE ADDED : ORDER HISTORY -->
 
     <%- include('footer.ejs') %>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        document.getElementById("edit").addEventListener("click", () => {
+            alert("FEATURE NOT AVAILABLE YET SIR HEHE");
+        })
+    </script>
 
 </body>
 </html>
